--- a/recetasmoreiras/package.json
+++ b/recetasmoreiras/package.json
@@ -14,6 +14,7 @@
     "eslint-config-react-app": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
