--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,12 @@
     "extends": ["react-app", "react-app/jest", "prettier"],
     "rules" : {
       "semi" : "warn",
-      "eqeqeq": "warn"
+      "eqeqeq": "warn",
+      "no-restricted-imports": [
+        "error",
+        {
+          "patterns": ["@mui/*/*/*"]
+        }
+      ]
     }
   }
