refactor: change the name of scenes folder to pages and move global under components folder
BREAKING CHANGE: This caused the white screen of death to occur, which still needs to be fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
-    "extends": ["react-app", "react-app/jest", "prettier"],
+  "plugins": ["react"],
+  "extends": ["react-app", "react-app/jest", "prettier", "eslint:recommended",
+  "plugin:react/recommended"],
     "rules" : {
       "semi" : "warn",
       "eqeqeq": "warn",
