--- a/recetasmoreiras/public/manifest.json
+++ b/recetasmoreiras/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Recetas Moreiras",
+  "name": "An online family cookbook",
   "icons": [
     {
       "src": "favicon.ico",
